# estimate

./: README.md  STATUS.md  docker-compose.yml  estimate-README.md
.claude/hooks/logs/: chat.json  post_tool_use.json  pre_tool_use.json  stop.json
.github/workflows/: ci.yml
backend/: .coverage  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  fix_imports.py  pyproject.toml
backend/.claude/hooks/logs/: chat.json  post_tool_use.json  pre_tool_use.json  stop.json
backend/alembic/: env.py
backend/alembic/versions/: 1d9cfd8fa51a_add_project_phases_and_feedback_tables.py  883e7bc4375b_initial_migration_with_mvp_models.py
backend/src/: main.py
backend/src/core/: auth.py  cache.py  config.py  database.py  health.py  storage.py
backend/src/models/: __init__.py  base.py  feedback.py  phase.py  photo.py  project.py  retailer.py  shopping_list.py  subscription.py  user.py
backend/src/repositories/: __init__.py  base.py  project.py  retailer.py  shopping_list.py  subscription.py  user.py
backend/tests/: conftest.py
backend/tests/integration/: test_docker_services.py  test_migrations.py
backend/tests/smoke/: __init__.py  test_project_setup.py
backend/tests/unit/: test_main.py
backend/tests/unit/test_core/: test_auth.py  test_cache.py  test_config.py  test_database.py  test_health.py  test_storage.py
backend/tests/unit/test_models/: test_model_repr.py  test_project.py  test_repr.py  test_user.py
backend/tests/unit/test_repositories/: test_base.py  test_project.py  test_project_repo.py  test_retailer.py  test_retailer_repo.py  test_shopping_list.py  test_shopping_list_repo.py  test_subscription_repo.py  test_user.py  test_user_repo.py
frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  router.tsx
frontend/src/components/common/: Alert.tsx  Button.tsx  Card.tsx  Input.tsx  ProtectedRoute.tsx  Spinner.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  useProjects.ts
frontend/src/lib/: apiClient.ts  queryClient.ts  supabase.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  ProjectsPage.tsx  index.ts
frontend/src/services/: auth.ts  index.ts  projects.ts
frontend/src/test/: setup.ts
frontend/tests/: setup.ts
frontend/tests/e2e/: health.spec.ts
shared/: README.md  docker-compose.yml
specs/001-materials-estimation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.backup-20251130-200803
specs/001-materials-estimation/.claude/hooks/logs/: chat.json  post_tool_use.json  pre_tool_use.json  stop.json
specs/001-materials-estimation/checklists/: accessibility.md  performance.md  requirements.md  security.md  validate-and-update.py
specs/001-materials-estimation/checklists/.claude/hooks/logs/: chat.json  post_tool_use.json  pre_tool_use.json  stop.json  sub_agent_stop.json
specs/001-materials-estimation/contracts/: README.md  openapi.yaml
